replaced all png images with svg

--- a/files for admin/CMS Pages/services.phtml
+++ b/files for admin/CMS Pages/services.phtml
@@ -52,7 +52,7 @@
                     </p>
                 </div>
                 <div class="service-section__image">
-                    <img loading="lazy" src="{{media url='wysiwyg/Service/design.png'}}" alt="devolope-image">
+                    <img loading="lazy" src="{{media url='wysiwyg/Service/Web_design.svg'}}" alt="devolope-image">
                 </div>
             </div>
         </section>
@@ -61,7 +61,7 @@
             <div class="service-section__body _grid-3-col">
                 <div class="service-section__label _section-label">Development</div>
                 <div class="service-section__image">
-                    <img loading="lazy" src="{{media url='wysiwyg/Service/Development.png'}}" alt="design-image ">
+                    <img loading="lazy" src="{{media url='wysiwyg/Service/Development.svg'}}" alt="design-image ">
                 </div>
                 <div class="service-section__content">
                     <h3 class="h3 service-section__title">Magento Development </h3>
@@ -80,7 +80,7 @@
                     </p>
                 </div>
                 <div class="service-section__image">
-                    <img loading="lazy" src="{{media url='wysiwyg/Service/migration.png'}}" alt="migration-image ">
+                    <img loading="lazy" src="{{media url='wysiwyg/Service/migration.svg'}}" alt="migration-image ">
                 </div>
             </div>
         </section>
@@ -89,7 +89,7 @@
             <div class="service-section__body _grid-3-col">
                 <div class="service-section__label _section-label">PWA</div>
                 <div class="service-section__image">
-                    <img loading="lazy" src="{{media url='wysiwyg/Service/pwa.png'}}" alt="migration-image ">
+                    <img loading="lazy" src="{{media url='wysiwyg/Service/pwa.svg'}}" alt="migration-image ">
                 </div>
                 <div class="service-section__content">
                     <h3 class="h3 service-section__title">Magento PWA</h3>
@@ -112,7 +112,7 @@
                     </ul>
                 </div>
                 <div class="service-section__image">
-                    <img loading="lazy" src="{{media url='wysiwyg/Service/Security.png'}}" alt="securety-image ">
+                    <img loading="lazy" src="{{media url='wysiwyg/Service/851_Converted_1.svg'}}" alt="securety-image ">
                 </div>
             </div>
         </section>
@@ -121,7 +121,7 @@
             <div class="service-section__body _grid-3-col">
                 <div class="service-section__label _section-label">Support</div>
                 <div class="service-section__image">
-                    <img loading="lazy" src="{{media url='wysiwyg/Service/support.png'}}" alt="support-image">
+                    <img loading="lazy" src="{{media url='wysiwyg/Service/support2.svg'}}" alt="support-image">
                 </div>
                 <div class="service-section__content">
                     <h3 class="h3 service-section__title">Magento Support</h3>
@@ -144,7 +144,7 @@
                     </ul>
                 </div>
                 <div class="service-section__image">
-                    <img loading="lazy" src="{{media url='wysiwyg/Service/Frame.png'}}" alt="">
+                    <img loading="lazy" src="{{media url='wysiwyg/Service/Frame.svg'}}" alt="">
                 </div>
             </div>
         </section>
