changes on homepage, added new map on company page, move old one to careers page

--- a/files for admin/CMS Pages/careers.phtml
+++ b/files for admin/CMS Pages/careers.phtml
@@ -46,6 +46,47 @@
         </div>
     </div>
 
+    <div class="careers-page__section careers-section careers-section--growth company-growth _container">
+        <div class="company-growth__body _grid-2-col">
+            <div class="company-growth__label _section-label">Growth</div>
+            <div class="company-growth__content">
+                <div class="company-growth__top">
+                    <h5 class="h5 company-growth__text">Our company was founded in 2009 and initially dealt with different CMS and Frameworks. Still, after some time, we realized that we should have a definite aim to develop ourselves in one thing, mastering skills in a narrow area.</h5>
+                    <h5 class="h5 company-growth__text _text-align-right">Perspective Studio has seen constant annual growth and success since its inception. We currently have five offices in Kyiv, Uzhhorod, Shostka, Cherkasy, and Kryvyi Rih.
+                    </h5>
+                </div>
+                <div class="company-growth__bottom">
+                    <h3 class="h3 company-growth__title">Our aim is to become <span class="company-growth__title--orange">the Best</span> Magento Team ever</h3>
+                    <div class="company-growth__image company-map-image" data-mage-init='{"companyImageAnimation" : {}}'>
+                        <div class="company-map-image__container">
+                            <div class="highlight" style="width:100%">
+                                <img loading="lazy" src="{{media url='wysiwyg/company/map/highlight.svg'}}" alt="hover" />
+                            </div>
+                            <div class="ukraine" style="width:100%">
+                                <img loading="lazy" src="{{media url='wysiwyg/company/map/ukraine.svg'}}" alt="hover" />
+                            </div>
+                            <div class="uzh">
+                                <img loading="lazy" src="{{media url='wysiwyg/company/map/uzh.svg'}}" alt="hover" />
+                            </div>
+                            <div class="shost">
+                                <img loading="lazy" src="{{media url='wysiwyg/company/map/shost.svg'}}" alt="hover" />
+                            </div>
+                            <div class="kyiv">
+                                <img loading="lazy" src="{{media url='wysiwyg/company/map/kyiv.svg'}}" alt="hover" />
+                            </div>
+                            <div class="kr">
+                                <img loading="lazy" src="{{media url='wysiwyg/company/map/kr.svg'}}" alt="hover" />
+                            </div>
+                            <div class="cher">
+                                <img loading="lazy" src="{{media url='wysiwyg/company/map/cher.svg'}}" alt="hover" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="careers-page__section careers-section careers-section--benefits ">
         <div class="careers-section__container _container  _grid-3-col">
             <div class="careers-section__section-label _section-label">Benefits</div>
