added links to badges, changed badges img

--- a/files for admin/CMS Pages/main.phtml
+++ b/files for admin/CMS Pages/main.phtml
@@ -1079,20 +1079,29 @@
             <div class="badges__col">
                 <div class="flex badges__list badges-list">
                     <div class="badges-list__item">
-                        <img class="badges-list__image" width="166" height="180" src="{{media url='wysiwyg/Main/badges/clutch.png'}}" alt="clutch">
+                        <a href="https://clutch.co/profile/perspective-1">
+                            <img class="badges-list__image" width="166" height="180" src="{{media url='wysiwyg/Main/badges/clutch.png'}}" alt="clutch">
+                        </a>
                     </div>
                     <div class="badges-list__item">
-                        <img class="badges-list__image" width="137" height="180" src="{{media url='wysiwyg/Main/badges/TopeCom.svg'}}" alt="TopeCom">
+                        <a href="https://techreviewer.co/companies/perspective-team">
+                            <img class="badges-list__image" width="137" height="180" src="{{media url='wysiwyg/Main/badges/TopeCom.svg'}}" alt="TopeCom">
+                        </a>
                     </div>
                     <div class="badges-list__item">
-                        <img class="badges-list__image" width="210" height="180" src="{{media url='wysiwyg/Main/badges/GoodFirms.svg'}}" alt="GoodFirms">
+                        <a href="https://www.goodfirms.co/company/perspective-team">
+                            <img class="badges-list__image" width="210" height="180" src="{{media url='wysiwyg/Main/badges/GoodFirms.svg'}}" alt="GoodFirms">
+                        </a>
                     </div>
                     <div class="badges-list__item">
-                        <img class="badges-list__image" width="128" height="180" src="{{media url='wysiwyg/Main/badges/TopSales.svg'}}" alt="TopSales">
+                        <a href="https://www.designrush.com/agency/profile/perspective-team">
+                            <img class="badges-list__image" width="128" height="180" src="{{media url='wysiwyg/Main/badges/designrush.png'}}" alt="Designrush">
+                        </a>
                     </div>
-                    <div class="badges-list__item">
+                    <!-- <div class="badges-list__item">
+                        <a href=""></a>
                         <img class="badges-list__image" width="180" height="180" src="{{media url='wysiwyg/Main/badges/TopDev.png'}}" alt="TopDev">
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
