added new pages to footer links nav

--- a/files for admin/CMS Blocks/footer-links-content.phtml
+++ b/files for admin/CMS Blocks/footer-links-content.phtml
@@ -8,15 +8,18 @@
       <a href="{{store url='blog'}}">Blog</a>
     </div>
     <!-- Страницы пока отсутствуют на сайте -->
-    <!-- <div class="h4 footer-links-content__link">
+    <div class="h4 footer-links-content__link">
       <a href="">Partners</a>
     </div>
     <div class="h4 footer-links-content__link">
-      <a href="">Privacy Policy</a>
+      <a href="{{store url='privacy-policy'}}">Privacy Policy</a>
     </div>
     <div class="h4 footer-links-content__link">
-      <a href="">Terms of Use</a>
-    </div> -->
+      <a href="{{store url='terms-of-service'}}">Terms of Use</a>
+    </div>
+    <div class="h4 footer-links-content__link">
+      <a href="{{store url='cookie-policy'}}">Cookie policy</a>
+    </div>
   </div>
   <!-- Company -->
   <div
