--- a/files for admin/CMS Blocks/footer-links-content.phtml
+++ b/files for admin/CMS Blocks/footer-links-content.phtml
@@ -11,7 +11,7 @@
     <div class="h4 footer-links-content__link">
       <a href="">Partners</a>
     </div>
-    <div class="h4 footer-links-content__link">
+    <!-- <div class="h4 footer-links-content__link">
       <a href="{{store url='privacy-policy'}}">Privacy Policy</a>
     </div>
     <div class="h4 footer-links-content__link">
@@ -19,7 +19,7 @@
     </div>
     <div class="h4 footer-links-content__link">
       <a href="{{store url='cookie-policy'}}">Cookie policy</a>
-    </div>
+    </div> -->
   </div>
   <!-- Company -->
   <div
