--- a/files for admin/CMS Pages/careers.phtml
+++ b/files for admin/CMS Pages/careers.phtml
@@ -19,7 +19,7 @@
 
             <div class="careers-section__col">
                 <h3 class="h3 careers-section__title">who we are</h3>
-                <h5 class="h5 careers-section__text">Perspective is a Ukrainian, Magento-oriented team, with a bias towards the technical component of projects. We are represented in 4 cities: Kiev, Uzhgorod, Krivoy Rog and Shostka. </h5>
+                <h5 class="h5 careers-section__text">Perspective is a Ukrainian, Magento-oriented team, with a bias towards the technical component of projects. We are represented in 5 cities: Kyiv, Uzhhorod, Kryvyi Rih, Cherkasy and Shostka. </h5>
                 <h5 class="h5 careers-section__text">Our clients are 70% Western companies (Europe and the USA) and 30% Ukrainian companies. Our goal is to be the best Magento experts.</h5>
             </div>
 
@@ -39,7 +39,7 @@
                     </div>
                     <div class="careers-squares__item">
                         <div class="careers-squares__digit">12</div>
-                        <p class="careers-squares__text">QA engineers <br /> & team lead</p>
+                        <p class="careers-squares__text">QA engineers</p>
                     </div>
                 </div>
             </div>
