--- a/files for admin/CMS Pages/main.phtml
+++ b/files for admin/CMS Pages/main.phtml
@@ -536,7 +536,7 @@
                         <div class="squares-company__square">
                             <div class="squares-company__number">12</div>
                             <h5 class="h5 squares-company__text">
-                                QA engineers & team lead
+                                QA engineers
                             </h5>
                         </div>
 
@@ -575,7 +575,7 @@
                         <div class="squares-company__square">
                             <div class="squares-company__number">12</div>
                             <h5 class="h5 squares-company__text">
-                                QA engineers & team lead
+                                QA engineers
                             </h5>
                         </div>
 
