--- a/files for admin/CMS Blocks/footer-links-content.phtml
+++ b/files for admin/CMS Blocks/footer-links-content.phtml
@@ -8,18 +8,10 @@
       <a href="{{store url='blog'}}">Blog</a>
     </div>
     <!-- Страницы пока отсутствуют на сайте -->
-    <div class="h4 footer-links-content__link">
-      <a href="">Partners</a>
-    </div>
     <!-- <div class="h4 footer-links-content__link">
-      <a href="{{store url='privacy-policy'}}">Privacy Policy</a>
-    </div>
-    <div class="h4 footer-links-content__link">
-      <a href="{{store url='terms-of-service'}}">Terms of Use</a>
-    </div>
-    <div class="h4 footer-links-content__link">
-      <a href="{{store url='cookie-policy'}}">Cookie policy</a>
+      <a href="">Partners</a>
     </div> -->
+    <!-- ==================================== -->
   </div>
   <!-- Company -->
   <div
@@ -46,6 +38,15 @@
       </div> -->
       <div class="footer-links-content__sublink">
         <a href="{{store url='careers'}}">Careers</a>
+      </div>
+      <div class="h4 footer-links-content__sublink">
+        <a href="{{store url='privacy-policy'}}">Privacy Policy</a>
+      </div>
+      <div class="footer-links-content__sublink">
+        <a href="{{store url='terms-and-conditions'}}">Terms of Use</a>
+      </div>
+      <div class="h4 footer-links-content__sublink">
+        <a href="{{store url='cookie-policy'}}">Cookie policy</a>
       </div>
     </div>
   </div>
