added itemprops to footer data and main page

--- a/files for admin/CMS Blocks/footer_info_block.phtml
+++ b/files for admin/CMS Blocks/footer_info_block.phtml
@@ -1,17 +1,24 @@
 <div class="footer__info footer-info ">
     <h5 class="h5 footer-info__title">Become a Client</h5>
-    <h5 class="h5 footer-info__text footer-info__text--contacts">
+    <h5 class="h5 footer-info__text footer-info__text--contacts" itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
         <p>
-            <a href="tel:+1 312-239-0843" class="footer-info__phone ">+1 312-239-0843</a>
+            <a href="tel:+1 312-239-0843" class="footer-info__phone " itemprop="telephone">+1 312-239-0843</a>
         </p>
         <p>
-            <a href="mailto:order@perspectiveteam.com" class="footer-info__email ">order@perspectiveteam.com</a>
+            <a href="mailto:order@perspectiveteam.com" class="footer-info__email " >
+                <span itemprop="email">order@perspectiveteam.com</span>
+            </a>
         </p>
     </h5>
     <h5 class="h5 footer-info__title ">Find us</h5>
-    <h5 class="h5 footer-info__text">
-        <p class="footer-info__address">Kyiv, 15a Tumaniana</p>
-        <p class="footer-info__site">perspectiveteam.com</p>
+    <h5 class="h5 footer-info__text" >
+        <p class="footer-info__address" itemprop="location" itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
+            <span itemprop="addressLocality">Kyiv</span>,
+            <span itemprop="streetAddress">15a Tumaniana</span>
+        </p>
+        <p class="footer-info__site" itemscope itemprop="organization" itemtype="https://schema.org/Organization">
+            <span itemprop="name">perspectiveteam.com</span>
+        </p>
     </h5>
     <h5 class="h5 footer-info__title ">Follow us</h5>
     <div class="footer-info__links">
