added last updates from prod.env

--- a/files for admin/CMS Pages/main.phtml
+++ b/files for admin/CMS Pages/main.phtml
@@ -136,13 +136,14 @@
         <div class="digital-block__top">
           <div class="digital-block__describe">
             <h3 class="h3 digital-block__title _sliding-text">
-              <span class="_sliding-text__line">All Digital Services</span>
+              <span class="_sliding-text__line">All Magento Services</span>
               <br />
               <span class="_sliding-text__line">Under One Roof</span>
             </h3>
             <h5 class="h5 digital-block__sub-title _text-align-right">
-              We have a wealth of experience working with corporate and personal clients. Many of those clients have
-              worked with us for more than 5 years.
+              With years of experience serving corporate and personal clients, our expertise in Magento development has
+              allowed us to deliver exceptional results that exceed expectations. Many of our clients have trusted us
+              for over 5 years, cementing our place as a reliable and trusted partner in the world of e-commerce.
             </h5>
           </div>
           <div class="digital-block__image">
@@ -324,20 +325,22 @@
               alt="integration "
             />
             <h5 class="h5 integration__text integration__text--mobile _text-align-right">
-              Integrate your Magento website with any backend system or external software to automate your work
-              processes and execute your business strategy more efficiently.
+              Seamlessly integrate your Magento website with any backend system or external software to automate your
+              work processes and execute your business strategy more efficiently. Trust us to provide you with a
+              solution that will enhance the effectiveness of your online presence.
             </h5>
           </div>
           <div class="integration__content">
             <h3 class="h3 integration__title _sliding-text">
-              <span class="_sliding-text__line">Integrate with </span>
+              <span class="_sliding-text__line">Integrate Magento with </span>
               <br /><span class="_sliding-text__line">any ecommerce</span> <br /><span class="_sliding-text__line"
                 >services</span
               >
             </h3>
             <h5 class="h5 integration__text _text-align-right">
-              Integrate your Magento website with any backend system or external software to automate your work
-              processes and execute your business strategy more efficiently.
+              With years of experience serving corporate and personal clients, our expertise in Magento development has
+              allowed us to deliver exceptional results that exceed expectations. Many of our clients have trusted us
+              for over 5 years, cementing our place as a reliable and trusted partner in the world of e-commerce.
             </h5>
           </div>
         </div>
@@ -805,8 +808,9 @@
             <span class="_sliding-text__line">Who we are</span>
           </h3>
           <h5 class="h5 company__text _text-align-right">
-            With more than a decade of experience, Perspective has become a leader in digital experiences.<br />
-            Clients worldwide entrust us with their website design, development, and management.
+            At Perspective Studio, we are more than just a team of talented web developers. <br />
+            We are a family of creatives, innovators, and problem-solvers with a shared passion for delivering
+            exceptional digital experiences.
           </h5>
 
           <div class="company__squares squares-company squares-company--mobile">
@@ -831,10 +835,10 @@
             </div>
           </div>
           <h5 class="h5 company__text _text-align-right">
-            We are the Magento‑focused web‑development company named
-            <span itemprop="legalName">Perspective Studio</span>, with HQ in Kyiv, Ukraine, with more than 60 employees.
-            <br />
-            Most are strong middle and senior developers with 5+ years of experience in Magento.
+            As a Magento-focused web development company, we have a team of more than 60 highly skilled employees,
+            including many Magento-certified developers. With an average of 5+ years of experience in Magento web
+            design, our developers are experts at creating e-commerce solutions that are both functional and visually
+            appealing.
           </h5>
           <div class="company__image">
             <img loading="lazy" src="{{media url='wysiwyg/Main/who-we.png'}}" alt="who-we-are" />
@@ -863,8 +867,9 @@
             </div>
           </div>
           <h5 class="h5 company__text _text-align-right">
-            Our philosophy is built on people who love creating, learning and growing together. Our studio of more than
-            60 people who form a team with ties that transcend the workplace.
+            Perspective's philosophy is centered around people who love creating, learning, and growing together. We are
+            a tight-knit community of professionals with a passion for digital excellence, and our bonds extend far
+            beyond the walls of our studio.
           </h5>
 
           <div class="company__button-box">
@@ -896,8 +901,9 @@
               <div class="gallery__content">
                 <div class="gallery__col">
                   <div class="gallery__text _text-align-right">
-                    We develop, design and delivers websites that drive results. Our work never brags, but it sure loves
-                    to speak for itself.
+                    At Perspective, we craft timeless digital experiences through cutting-edge design and reliable
+                    development. Our work speaks for itself, showcasing a portfolio of successful Magento stores and
+                    marketplaces we've created for clients in various industries.
                   </div>
                   <div
                     class="gallery__slide gallery-slide"
@@ -956,7 +962,7 @@
                       <img loading="lazy" src="{{media url='wysiwyg/Main/vodofon.png'}}" alt="vodofon " />
                     </div>
                     <div class="gallery-slide__content">
-                      <span class="gallery-slide__title" itemprop="name"> Vodafon </span>
+                      <span class="gallery-slide__title" itemprop="name"> Vodafone </span>
                       <p class="gallery-slide__text" itemprop="potentialAction">Development, integrations, support</p>
                     </div>
                   </div>
@@ -980,8 +986,17 @@
               <span class="_sliding-text__line">We are trusted</span>
             </h3>
             <h5 class="h5 trusted__sub-title _text-align-right">
-              We make Magento work for our clients with perfect codes, engaging interactions, thoughtful integrations
-              and a commitment to ongoing support.
+              At Perspective, we take pride in leveraging the full potential of Magento CMS to benefit our clients. Our
+              team of seasoned developers is dedicated to delivering customized solutions that meet the unique needs of
+              each business, with a focus on writing perfect codes and fostering engaging interactions.
+              <br /><br />
+              We understand that a successful website requires more than just technical expertise. That's why we
+              prioritize thoughtful integrations and user-centered design, to ensure that every aspect of the online
+              experience is enjoyable and effective.
+              <br /><br />
+              And, as a testament to our commitment, we offer ongoing support to our clients, ensuring that their
+              Magento CMS website will continue to grow and evolve along with their business. Trust us to make Magento
+              work for you.
             </h5>
           </div>
 
@@ -1076,8 +1091,13 @@
             <br /><span class="_sliding-text__line">say about us</span>
           </h3>
           <h5 class="h5 comments__sub-title _text-align-right">
-            We have a wealth of experience working with corporate and personal clients. Many of those clients have
-            worked with us for more than 5 years.
+            At Perspective, we are honored by the continued trust and loyalty of our clients, who come from diverse
+            industries and backgrounds. With a wealth of experience serving corporate and personal clients, we are proud
+            to have established long-lasting relationships with many of them for over 5 years and counting.
+            <br /><br />
+            Their satisfaction is a testament to our commitment to delivering exceptional results and fostering
+            positive, collaborative partnerships. Whether working with Magento or other technologies, our team
+            consistently strives to exceed expectations and provide unparalleled service.
           </h5>
         </div>
 
@@ -1275,7 +1295,7 @@
           <span class="_sliding-text__line">Great projects</span> <br /><span class="_sliding-text__line"
             >requires great</span
           >
-          <br /><span class="_sliding-text__line">engineers</span>
+          <br /><span class="_sliding-text__line">Magento engineers</span>
         </h3>
         <p class="main-certification__text _text-align-right">
           We know how important adherence is. <br />
@@ -1334,7 +1354,8 @@
       <div class="main-certification__col">
         <div class="main-certification__text--open-sans">
           <p class="_text-align-right">
-            Also, we already have 8 certified developers and solution specialists with 13 certificates for M1 and M2.
+            Also, we already have 8 Magento certified developers and solution specialists with 13 Magento 1 and Magento
+            2 certificates.
           </p>
         </div>
         <div class="main-certification__magento-achievments magento-achievments">
