added last updates from prod.env

--- a/files for admin/CMS Pages/company.phtml
+++ b/files for admin/CMS Pages/company.phtml
@@ -34,7 +34,7 @@
         </div>
         <div class="company-squares__square company-square company-square--qa">
           <div class="company-square__digit">12</div>
-          <p class="company-square__text">QA engineers <br />& team lead</p>
+          <p class="company-square__text">QA engineers</p>
         </div>
         <div class="company-squares__square company-square company-square--devops">
           <div class="company-square__digit">4</div>
@@ -43,7 +43,7 @@
       </div>
     </div>
 
-    {{widget type="Magento\Cms\Block\Widget\Block" template="widget/static_block/default.phtml" block_id="9"}}
+    {{widget type="Magento\Cms\Block\Widget\Block" template="widget/static_block/default.phtml" block_id="8"}}
 
     <section class="company-page__team company-team">
       <div class="company-team__body _grid-2-col">
